--- a/oversteer/main.ui
+++ b/oversteer/main.ui
@@ -2403,7 +2403,8 @@
       <object class="GtkHeaderBar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="title">Oversteer - Steering Wheel Manager</property>
+        <property name="title">Oversteer</property>
+        <property name="subtitle">Steering Wheel Manager</property>
         <property name="has_subtitle">False</property>
         <property name="show_close_button">True</property>
         <child>
