--- a/oversteer/main.ui
+++ b/oversteer/main.ui
@@ -867,6 +867,7 @@
                                     <property name="homogeneous">True</property>
                                     <child>
                                       <object class="GtkLevelBar" id="steering_left_input">
+                                        <property name="name">steering-input-left</property>
                                         <property name="height_request">60</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
@@ -880,6 +881,7 @@
                                     </child>
                                     <child>
                                       <object class="GtkLevelBar" id="steering_right_input">
+                                        <property name="name">steering-input-right</property>
                                         <property name="height_request">60</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
