fixed UI bug and added support for Thrustmaster

--- a/oversteer/main.css
+++ b/oversteer/main.css
@@ -6,6 +6,8 @@ list.list > row {
     padding-right: 16px;
 }
 levelbar block.filled {
+    min-width: 0px;
+    min-height: 0px;
     background-color: #3584e4;
 }
 stacksidebar list row {
